main page fixes

--- a/public/locales/ko/translation.json
+++ b/public/locales/ko/translation.json
@@ -1,6 +1,6 @@
 {
   "main_title": "FieldBOOK™",
   "subtitle": "모든 순간을 함께하는 프리미엄 AI Caddie",
-  "description": "딥러닝 비전·GPS 가이드로 골퍼를 실시간 추적하고, 상황별 맞춤 클럽을 제안하며, 모든 플레이 영상을 자동 저장해 골프장의 운영 효율과 고객 만족을 함께 높입니다",
+  "description": "딥러닝 비전과 GPS 기술을 활용하여 실시간 골퍼 추적, 맞춤 클럽 추천,\n\n플레이 영상 자동 저장을 제공함으로써 골프장의 운영 효율성과 고객 만족도를 높입니다.",
   "explore_button": "Explore FieldBOOK"
 }
