--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
   "main_title": "FieldBOOK™",
   "subtitle": "The premium AI Caddie for every moment",
-  "description": "Real-time golfer tracking with deep-learning vision and GPS guide, suggesting custom clubs for every situation, and automatically saving all play videos to enhance golf course operational efficiency and customer satisfaction.",
+  "description": "Real-time golfer tracking with deep-learning vision and GPS guide,\n\nsuggesting custom clubs for every situation, and automatically saving all play videos to enhance golf course operational efficiency and customer satisfaction.",
   "explore_button": "Explore FieldBOOK"
 }
